# cmd/app-core/docs/swagger.json
@@ -6,18 +6,13 @@
         "contact": {},
         "version": "1.0"
     },
+    "basePath": "/service/api/v1",
     "paths": {
-        "/service/api/v1/info": {
+        "/cards": {
             "get": {
                 "description": "Get info API",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
-                    "infos"
+                    "card"
                 ],
                 "summary": "Get info API",
                 "responses": {
@@ -29,12 +24,114 @@
                     }
                 }
             },
-            "put": {
-                "description": "put info API service name",
+            "post": {
+                "description": "post Card",
                 "tags": [
-                    "infos"
+                    "card"
                 ],
-                "summary": "put info API",
+                "summary": "post Card API",
+                "parameters": [
+                    {
+                        "description": "CardUpdate",
+                        "name": "CardUpdate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CardUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/cards/{id}": {
+            "put": {
+                "description": "put Card API",
+                "tags": [
+                    "card"
+                ],
+                "summary": "put Card API",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Card ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "CardUpdate",
+                        "name": "CardUpdate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CardUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Card API",
+                "tags": [
+                    "card"
+                ],
+                "summary": "Delete Card API",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Card ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/info": {
+            "get": {
+                "description": "Get info API",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get info API",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "just test only , not really update",
+                "summary": "test patch InfoUpdate API",
                 "parameters": [
                     {
                         "description": "InfoUpdate",
@@ -58,6 +155,22 @@
         }
     },
     "definitions": {
+        "models.CardUpdate": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string",
+                    "example": "finished CRUD APIs"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "learn golang"
+                }
+            }
+        },
         "models.InfoUpdate": {
             "type": "object",
             "required": [
